--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,10 +11,15 @@
             <div class="col-12 mb-5 pb-5">
                 <div class="row align-items-center">
                     <div class="col-md-6 mb-4 mb-md-0">
+                        <a href="{{.Permalink}}">
                         <img src="{{ .Params.image | relURL }}" alt="{{.Title}}" class="img-fluid rounded-lg w-100">
+                        </a>
                     </div>
                     <div class="col-md-6">
                         <h2><a href="{{ .Permalink }}" title="{{ .Title }}" class="post-title">{{ .Title }}</a></h2>
+                        {{ range .Params.tags }}
+                        <span class="badge rounded-pill bg-dark"> <a class="text-white" href="/tags/{{ . | urlize }}">{{ . }}</a></span>
+                        {{ end }}
                         <p class="card-text">{{ .Summary }}</p>
                         <a href="{{.Permalink}}" title="{{ i18n " readmore" }} - {{ .Title }}" class="btn
                         btn-primary">{{ i18n "readmore" }}</a>
