--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,10 +5,10 @@
 
 <section class="section">
   <div class="container">
-    <div class="row">
+    <article class="row col-lg-8 mx-auto">
       <div class="col-lg-8 mx-auto">
         <img src="{{ .Params.image | relURL }}" alt="{{ .Title }}" class="img-fluid w-100 rounded mb-4">
-        <h2 class="mb-4">{{ .Title }}</h2>
+        <h1 class="mb-4">{{ .Title }}</h1>
         {{ range .Params.tags }}
           <span class="mb-3 badge rounded-pill bg-dark"> <a class="text-white" href="/tags/{{ . | urlize }}">{{ . }}</a></span>
         {{ end }}
@@ -22,7 +22,7 @@
         </div>
         {{ end }}
       </div>
-    </div>
+    </article>
   </div>
 </section>
 
