Remove redundant classes

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,7 +5,7 @@
 
 <section class="section">
   <div class="container">
-    <article class="row col-lg-8 mx-auto">
+    <article class="row">
       <div class="col-lg-8 mx-auto">
         <img src="{{ .Params.image | relURL }}" alt="{{ .Title }}" class="img-fluid w-100 rounded mb-4">
         <h1 class="mb-4">{{ .Title }}</h1>
