--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -58,7 +58,7 @@
 
                 {{ if site.Params.navigation_button.enable }}
                 {{ with site.Params.navigation_button }}
-                <a href="{{ .link | relLangURL }}" title="{{ .label }}" class="btn btn-sm btn-primary ml-3">{{ .label }}</a>
+                <a href="{{ .link | relLangURL }}" title="{{ .label }}" style="background-color: #0F2F4C;" class="btn btn-sm btn-primary ml-3">{{ .label }}</a>
                 {{ end }}
                 {{ end }}
             </div>
