Style fix for mobile navbar

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,6 +5,7 @@
         padding: 20px;
     }
     .dropdown-item {
+        text-align: center;
         color: #fff;
         padding: 10px;
         font-size: 1.25em;
