--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,6 +14,15 @@
         background-color: #0b233a;
         color: #eee;
     }
+
+    .big-btn {
+        background-color: #0F2F4C;
+        color: #fff;
+    }
+
+    .big-btn:hover{
+        color: #fff;
+    }
 </style>
 {{ "<!-- navigation -->" | safeHTML }}
 <header class="navigation">
@@ -76,7 +85,7 @@
 
                 {{ if site.Params.navigation_button.enable }}
                 {{ with site.Params.navigation_button }}
-                <a href="{{ .link | relLangURL }}" title="{{ .label }}" style="background-color: #0F2F4C;" class="btn btn-sm btn-primary ml-3">{{ .label }}</a>
+                <a href="{{ .link | relLangURL }}" title="{{ .label }}" class="big-btn btn btn-sm ml-3">{{ .label }}</a>
                 {{ end }}
                 {{ end }}
             </div>
