Add new font for navbar

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -20,8 +20,15 @@
         color: #fff;
     }
 
+    .big-btn {
+        font-family: 'Space Grotesk', sans-serif !important;
+    }
+
     .big-btn:hover{
         color: #fff;
+    }
+    .navigation {
+        font-family: 'Space Grotesk', sans-serif;
     }
 </style>
 {{ "<!-- navigation -->" | safeHTML }}
