--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -36,7 +36,7 @@
     <div class="container">
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-            <a class="navbar-brand" href="{{ site.BaseURL | absLangURL }}">
+            <a class="navbar-brand" href="{{ site.Params.homeURL | absLangURL }}">
                 {{ with site.Params.logo}}
                 <img width="{{site.Params.logo_width}}" class="img-fluid" src="{{ . | relLangURL }}" alt="{{ site.Title }}">
                 {{ else }}{{site.Title}}{{end}}
