--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,17 +18,28 @@
     .big-btn {
         background-color: #0F2F4C;
         color: #fff;
-    }
-
-    .big-btn {
-        font-family: 'Space Grotesk', sans-serif !important;
+        font-family: 'Nunito Sans', sans-serif;
+        font-weight: 700;
     }
 
     .big-btn:hover{
         color: #fff;
     }
     .navigation {
-        font-family: 'Space Grotesk', sans-serif;
+        font-family: 'Nunito Sans', sans-serif;
+        font-weight: 700;
+        color: #0e3252 !important;
+    }
+    .navbar-light .navbar-nav .nav-link {
+        color: #0e3252;
+    }
+
+    .navbar-light .navbar-nav .nav-link:hover, .nav-link:focus, .nav-link:active {
+        color: #0e3252;
+    }
+
+    .navbar-light .navbar-nav .show>.nav-link {
+        color: #0e3252;
     }
 </style>
 {{ "<!-- navigation -->" | safeHTML }}
@@ -50,7 +61,7 @@
                     {{ range site.Menus.main }}
                     {{ if .HasChildren }}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" style="color: #255983;" href="#" role="button" data-toggle="dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">
                             {{ .Name }}
                         </a>
                         <div class="dropdown-menu">
@@ -61,7 +72,7 @@
                     </li>
                     {{ else }}
                     <li class="nav-item">
-                        <a class="nav-link" style="color: #255983;" href="{{ .URL | relLangURL }}" title="{{ .Name }}">{{ .Name }}</a>
+                        <a class="nav-link" href="{{ .URL | relLangURL }}" title="{{ .Name }}">{{ .Name }}</a>
                     </li>
                     {{ end }}
                     {{ end }}
