--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,12 @@
 {{ define "main" }}
-
+<style>
+  .content a {
+      color: #32a1d4;
+  }
+  .post-title {
+    text-transform: capitalize;
+  }
+</style>
 <!-- checking blog -->
 {{ if or (or (eq .Section "post") (eq .Section "blog")) (or (eq .Section "categories") (eq .Section "tags") )}}
 
@@ -8,7 +15,7 @@
     <article class="row">
       <div class="col-lg-8 mx-auto">
         <img src="{{ .Params.image | relURL }}" alt="{{ .Title }}" class="img-fluid w-100 rounded mb-4">
-        <h1 class="mb-4">{{ .Title }}</h1>
+        <h1 class="mb-4 post-title">{{ .Title }}</h1>
         {{ range .Params.tags }}
           <span class="mb-3 badge rounded-pill bg-dark"> <a class="text-white" href="/tags/{{ . | urlize }}">{{ . }}</a></span>
         {{ end }}
