Only show images if available.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -42,9 +42,11 @@
             {{ range $paginator.Pages }}
             <div class="col-lg-4 col-sm-6 mb-5">
                 <article class="card border-0">
+                    {{ if .Params.image }}
                     <a href="{{.Permalink}}">
                     <img src="{{ .Params.image |relURL }}" alt="{{ .Title }}" class="mb-1 card-img rounded-lg mb-4">
                     </a>
+                    {{ end }}
                     <div class="card-body p-0">
                         <h3><a href="{{ .Permalink }}" title="{{ .Title }}" class="post-title">{{ .Title }}</a></h3>
                         {{ range .Params.tags }}
