Update default list to include authors

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -14,7 +14,7 @@
     }
 </style>
 <!-- checking blog -->
-{{ if or (or (eq .Section "post") (eq .Section "blog")) (or (eq .Section "categories") (eq .Section "tags") )}}
+{{ if or (or (eq .Section "post") (eq .Section "blog")) (or (eq .Section "authors") (eq .Section "tags") )}}
 <section class="section">
     <div class="container">
         <div class="row">
