--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -17,10 +17,16 @@
         <img src="{{ .Params.image | relURL }}" alt="{{ .Title }}" class="img-fluid w-100 rounded mb-4">
         <h1 class="mb-4 post-title">{{ .Title }}</h1>
         {{ range .Params.tags }}
-          <span class="mb-3 badge rounded-pill bg-dark"> <a class="text-white" href="/tags/{{ . | urlize }}">{{ . }}</a></span>
+          <span class="mb-3 badge rounded-pill bg-dark">
+            <a class="text-white" href="/tags/{{ . | urlize }}">{{ . }}</a></span>
         {{ end }}
+
         <div class="content">{{.Content}}</div>
-        <p class="blockquote-footer text-right">By <a href={{.Params.authorLink}}> {{ .Params.author }} </a> on {{ .Date.Format "Monday, January 2, 2006"}}</p>
+
+        <p class="blockquote-footer text-right">
+          By <a href="/authors/{{ .Params.authors | urlize }}">
+            {{ .Params.authors }} </a> on {{ .Date.Format "Monday, January 2, 2006"}}
+        </p>
 
         <!-- comments -->
         {{ if site.DisqusShortname }}
