Standardize image sizes

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -43,6 +43,10 @@
     .navbar-light .navbar-nav .show>.nav-link {
         color: #0e3252;
     }
+
+    .card-img {
+        min-height: 200px;
+    }
 </style>
 {{ "<!-- navigation -->" | safeHTML }}
 <header class="navigation-bar">
