Uniform image sizes

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -46,8 +46,9 @@
 
     .card-img {
         min-height: 200px;
+        height: 10vh;
     }
-  
+
     .display-3 {
         text-align: left;
     }
