--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -52,6 +52,10 @@
     .display-3 {
         text-align: left;
     }
+
+    code, .content * {
+        margin-bottom: 0px;
+    }
 </style>
 {{ "<!-- navigation -->" | safeHTML }}
 <header class="navigation-bar">
