--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -84,4 +84,12 @@
         </ul>
         {{ end }}
   </div>
+  <!-- Microsoft Clarity -->
+  <script type="text/javascript">
+  (function(c,l,a,r,i,t,y){
+    c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+    t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+    y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+  })(window,document,"clarity","script","b5xzegngm1");
+  </script>
 </footer>
