--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -128,6 +128,7 @@
     }
 
     footer {
+        margin-top: 12px;
         background-color: #f1f1f2;
         color: var(--footer-fg-color);
     }
