Fixes image aspect ratios, #77

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -85,8 +85,7 @@
     }
 
     .card-img {
-        min-height: 200px;
-        height: 10vh;
+        aspect-ratio: auto;
     }
 
     .display-3 {
