--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -57,6 +57,9 @@
                     {{ end }}
                 </ul>
 
+                <div>
+                    <i class="fas theme-toggle" id="theme-toggle-btn"></i>
+                </div>
                 {{ if site.Params.navigation_button.enable }}
                 {{ with site.Params.navigation_button }}
                 <a href="{{ .link | relLangURL }}" title="{{ .label }}" class="big-btn btn btn-sm ml-3">{{ .label }}</a>
@@ -67,3 +70,49 @@
     </div>
 </header>
 {{ "<!-- /navigation -->" | safeHTML }}
+
+<script type="text/javascript">
+    const body = document.querySelector("body");
+    const themeToggleButton = document.querySelector("#theme-toggle-btn");
+    
+    themeToggleButton.addEventListener('click', toggleTheme);
+
+    function toggleTheme(){
+      const isDarkThemeActive = body.classList.contains("dark-theme");
+      if (isDarkThemeActive) {
+        changeTheme('light');
+      } else{
+        changeTheme('dark');
+      }
+    }
+
+    function changeTheme(theme){
+      if(theme == 'light') {
+        themeToggleButton.classList.remove('fa-sun');
+        themeToggleButton.classList.add('fa-moon');
+        body.classList.remove('dark-theme');
+        saveThemeToLocalStorage(theme);
+        
+      } else {
+        themeToggleButton.classList.add('fa-sun');
+        themeToggleButton.classList.remove('fa-moon');
+        body.classList.add('dark-theme');
+        saveThemeToLocalStorage(theme);
+      }
+    }
+
+    function saveThemeToLocalStorage(theme){
+      localStorage.setItem('theme', theme);
+    }
+
+    const currentTheme = localStorage.getItem('theme');
+    if(currentTheme){
+      if(currentTheme === 'dark') {
+        changeTheme('dark');
+      } else{
+        changeTheme('light');
+      }
+    } else{
+      changeTheme('light');
+    }
+  </script>
