ENH: Added Card Background

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -215,6 +215,12 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
     cursor: pointer;
   }
 
+  /* Light Theme */
+  .card {
+    background-color: #f8f8f8;
+  }
+  /* END: Light Theme */
+
   /* Dark Theme */
   :root {
     --dark-body-background: #222222;
