ENH: Added Padding to Theme Icon

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -58,7 +58,7 @@
                 </ul>
 
                 <div>
-                    <i class="fas theme-toggle" id="theme-toggle-btn"></i>
+                    <i class="fas theme-toggle p-2" id="theme-toggle-btn"></i>
                 </div>
                 {{ if site.Params.navigation_button.enable }}
                 {{ with site.Params.navigation_button }}
