ADD: share buttons below blogs
Co-authored-by: Jaymin Shah <shahjaymin2101@gmail.com>

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -23,6 +23,8 @@
           on {{ .Date.Format "Monday, January 2, 2006"}}
         </p>
 
+        {{ partial "share-buttons.html" . }}
+
         <!-- comments -->
         {{ if site.DisqusShortname }}
         <div class="mt-5">
