--- a/layouts/partials/share-buttons.html
+++ b/layouts/partials/share-buttons.html
@@ -241,8 +241,8 @@
 	}
 
 	.resp-sharing-button--whatsapp {
-		background-color: #25D366;
-		border-color: #25D366;
+		background-color: #0D9F4E;
+		border-color: #0D9F4E;
 	}
 
 	.resp-sharing-button--whatsapp:hover,
