Add support for structured data

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -60,3 +60,6 @@
 
 <!-- google analytics -->
 {{ template "_internal/google_analytics.html" . }}
+
+<!-- structured data -->
+{{ partial "schema.html" . }}
