ADD: ability to subscribe to blogs!

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -25,6 +25,8 @@
 
         {{ partial "share-buttons.html" . }}
 
+				{{ partial "newsletter.html" . }}
+
         <!-- comments -->
         {{ if site.DisqusShortname }}
         <div class="mt-5">
