--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -25,7 +25,7 @@
 
         {{ partial "share-buttons.html" . }}
 
-        {{ partial "newsletter.html" . }}
+        {{ partial "subscribe.html" . }}
 
         <!-- comments -->
         {{ if site.DisqusShortname }}
