--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,8 @@
 {{ define "main" }}
-<!-- checking blog -->
-{{ if or (or (eq .Section "post") (eq .Section "blog")) (or (eq .Section "categories") (eq .Section "tags") )}}
 
+{{ if or (in .Params.tags "Case Study") (in .Params.categories "Case Study") }}
+{{ partial "case-study.html" . }}
+{{ else if or (or (eq .Section "post") (eq .Section "blog")) (or (eq .Section "categories") (eq .Section "tags") )}}
 <section class="section">
   <div class="container">
     <article class="row">
