feat: add global case study template

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
 
-{{ if or (in .Params.tags "Case Study") (in .Params.categories "Case Study") }}
+{{ if (eq .Params.slug "sh-case-study") }}
+{{ partial "global-case-study.html" . }}
+{{ else if or (in .Params.tags "Case Study") (in .Params.categories "Case Study") }}
 {{ partial "case-study.html" . }}
 {{ else if or (or (eq .Section "post") (eq .Section "blog")) (or (eq .Section "categories") (eq .Section "tags") )}}
 <section class="section">
