monnai case study added

--- a/layouts/partials/case-study.html
+++ b/layouts/partials/case-study.html
@@ -12,7 +12,7 @@
             <div class="stats-container mt-5">
                 <div class="stats">
                     <p>2%</p>
-                    <p>lorem ipsum</p>
+                    <p>lorem ipsum template</p>
                 </div>
                 <div class="stats">
                     <p>2%</p>
