--- a/layouts/partials/global-case-study.html
+++ b/layouts/partials/global-case-study.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="details-box">
                     <p>Industry</p>
-                    <p>Industry Name</p>
+                    <p>Healthcare</p>
                 </div>
             </div>
 
