--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,6 +2,8 @@
 
 {{ if (eq .Params.slug "sh-case-study") }}
 {{ partial "global-case-study.html" . }}
+{{ else if (eq .Params.slug "monnai-case-study") }}
+{{ partial "monnai-case-study.html" . }}
 {{ else if or (in .Params.tags "Case Study") (in .Params.categories "Case Study") }}
 {{ partial "case-study.html" . }}
 {{ else if or (or (eq .Section "post") (eq .Section "blog")) (or (eq .Section "categories") (eq .Section "tags") )}}
