--- a/layouts/partials/monnai-case-study.html
+++ b/layouts/partials/monnai-case-study.html
@@ -1,13 +1,13 @@
 <div class="case-study">
     <div class="template-container">
         <div class="text-container">
-            <h1 class="title">
+            <h1 class="title text-center">
                 {{ .Title }}
             </h1>
-            <p class="summary">{{ .Summary }}</p>
+            <p class="summary text-center">{{ .Description }}</p>
             <p>
 
-            <h2 class="section-heading">OUTCOMES</h2>
+            <h2 class="section-heading text-center">OUTCOMES</h2>
 
             <div class="stats-container mt-5">
                 <div class="stats">
@@ -24,7 +24,7 @@
                 </div>
                 <div class="stats">
                     <p>92%+</p>
-                    <p>Code Coverage</p>
+                    <p>Automatically Tested</p>
                 </div>
                 <div class="stats">
                     <p>$6.5</p>
@@ -32,8 +32,8 @@
                 </div>
             </div>
         </div>
-        <div class="banner-container">
-            <img alt="banner" src="../../static/images/2023/monnai-case-study/monnai-banner.png" />
+        <div class="banner-container bg-deep_blue">
+            <img class="img_small" src="{{ .Params.banner_image |relURL }}" alt="{{ .Title }}">
         </div>
         <div class="text-container">
             <h2 class="section-heading">BACKGROUND</h2>
@@ -62,7 +62,7 @@
                 <div class="item">
                     <div class="rounded-circle bg-secondary">
                         <img class="rounded-circle" style="width: 62px; height: 62px;background: #D9D9D9 !important;"
-                            src>
+                            src="{{ .Params.what_we_did_icon_1 |relURL }}">
                     </div>
                     <p class="label">Go to market in three months</p>
                 </div>
@@ -70,7 +70,7 @@
                 <div class="item">
                     <div class="rounded-circle bg-secondary">
                         <img class="rounded-circle" style="width: 62px; height: 62px;background: #D9D9D9 !important;"
-                            src>
+                        src="{{ .Params.what_we_did_icon_2 |relURL }}">
                     </div>
                     <p class="label">The ability to respond quickly to feedback from potential customers</p>
                 </div>
@@ -78,7 +78,7 @@
                 <div class="item">
                     <div class="rounded-circle bg-secondary">
                         <img class="rounded-circle" style="width: 62px; height: 62px;background: #D9D9D9 !important;"
-                            src>
+                        src="{{ .Params.what_we_did_icon_3 |relURL }}">
                     </div>
                     <p class="label">Onboarding their first customer within six months</p>
                 </div>
@@ -86,7 +86,7 @@
                 <div class="item">
                     <div class="rounded-circle bg-secondary">
                         <img class="rounded-circle" style="width: 62px; height: 62px;background: #D9D9D9 !important;"
-                            src>
+                        src="{{ .Params.what_we_did_icon_4 |relURL }}">
                     </div>
                     <p class="label">Sustained frequent releases to ensure the product evolved rapidly and incrementally</p>
                 </div>
@@ -94,7 +94,7 @@
                 <div class="item">
                     <div class="rounded-circle bg-secondary">
                         <img class="rounded-circle" style="width: 62px; height: 62px;background: #D9D9D9 !important;"
-                            src>
+                        src="{{ .Params.what_we_did_icon_5 |relURL }}">
                     </div>
                     <p class="label">An amazing team morale</p>
                 </div>
@@ -102,41 +102,68 @@
                 <div class="item">
                     <div class="rounded-circle bg-secondary">
                         <img class="rounded-circle" style="width: 62px; height: 62px;background: #D9D9D9 !important;"
-                            src>
+                        src="{{ .Params.what_we_did_icon_6 |relURL }}">
                     </div>
                     <p class="label">$6.5 million of funding in just one year of going live.</p>
                 </div>
             </div>
         </div>
-        <div class="banner-container">
-            <img alt="banner" src="../../static/images/2023/monnai-case-study/testimonial.png" />
+        <div class="banner-container bg-deep_blue text-center testimonial">
+            <div class="inner">
+                <img style="width: 62px; height: auto; margin-bottom: -20px;"
+                    src="{{ .Params.open_quote |relURL }}">
+                <p class="paragraph-body text-white text">
+                    We went from an initial call with Incubyte to starting work in under 15 days and from an idea to a working MVP in just three months. They started from scratch, setup our cloud infrastructure around high availability, performance and security, and helped us implement the right stack with the right setup. Their focus on best practices ensured that our product continued to evolve rapidly while we build our internal team in parallel. The well written code also made onboarding internal engineers smooth. Overall, they got us started on the right foot. They stood out as an agency that focussed heavily on quality in addition to just getting things done. We learnt a lot from Incubyte and would recommend them as engineering partners for any start-up launching new products.
+                </p>
+                <img style="width: 62px; height: auto; align-self: end; margin-top: -20px;"
+                    src="{{ .Params.close_quote |relURL }}">
+            </div>
+            <img class="rounded-circle" style="width: 62px; height: 62px;background: #D9D9D9 !important;"
+                src="{{ .Params.testimonial_person |relURL }}">
+            <p class="label text-white name">Ravish Patel, Co-founder at Monnai</p>
         </div>
         <div class="text-container">
             <h2 class="project-highlights-heading">PROJECT HIGHLIGHTS</h2>
 
             <div class="project-highlights-grid">
-                <div class="item">
-                    <p class="index">1.</p>
-                    <p class="label">Defining A Vision For The Product And The Partnership</p>
-                </div>
+                <a href="#highlight_1">
+                    <div class="item">
+                        <p class="index">1.</p>
+                        <p class="label">Defining A Vision For The Product And The Partnership</p>
+                        <img style="width: 28px; height: auto; align-self: start;"
+                        src="{{ .Params.right_arrow |relURL }}">
+                    </div>
+                </a>
 
-                <div class="item">
-                    <p class="index">2.</p>
-                    <p class="label">Automation, Automation, Automation</p>
-                </div>
+                <a href="#highlight_2">
+                    <div class="item">
+                        <p class="index">2.</p>
+                        <p class="label">Automation, Automation, Automation</p>
+                        <img style="width: 28px; height: auto; align-self: start;"
+                        src="{{ .Params.right_arrow |relURL }}">
+                    </div>
+                </a>
 
-                <div class="item">
-                    <p class="index">3.</p>
-                    <p class="label">Cloud Infrastructure</p>
-                </div>
+                <a href="#highlight_3">
+                    <div class="item">
+                        <p class="index">3.</p>
+                        <p class="label">Cloud Infrastructure</p>
+                        <img style="width: 28px; height: auto; align-self: start;"
+                        src="{{ .Params.right_arrow |relURL }}">
+                    </div>
+                </a>
 
-                <div class="item">
-                    <p class="index">4.</p>
-                    <p class="label">Observability And Monitoring</p>
-                </div>
+                <a href="#highlight_4">
+                    <div class="item">
+                        <p class="index">4.</p>
+                        <p class="label">Observability And Monitoring</p>
+                        <img style="width: 28px; height: auto; align-self: start;"
+                        src="{{ .Params.right_arrow |relURL }}">
+                    </div>
+                </a>
             </div>
 
-            <h3 class="project-highlights-subheading mt-5">
+            <h3 class="project-highlights-subheading mt-5" id="highlight_1">
                 1. Defining A Vision For The Product And The Partnership
             </h3>
 
@@ -168,11 +195,11 @@
                 The productivity pattern of a growing company typically looks like the following, exponential at first and then a dip!
             </p>
         </div>
-        <div class="banner-container">
-            <img alt="banner" src="../../static/images/2023/monnai-case-study/graph.png" />
+        <div class="banner-container bg-grey">
+            <img class="img_small" src="{{ .Params.image_1 |relURL }}" alt="productivity pattern of a growing company">
         </div>
         <div class="text-container">
-            <h3 class="project-highlights-subheading mt-4">
+            <h3 class="project-highlights-subheading mt-4" id="highlight_2">
                 2. AUTOMATION, AUTOMATION, AUTOMATION
             </h3>
 
@@ -216,7 +243,7 @@
             </p>
         </div>
         <div class="text-container">
-            <h3 class="project-highlights-subheading mt-4">
+            <h3 class="project-highlights-subheading mt-4" id="highlight_3">
                 3. CLOUD INFRASTRUCTURE
             </h3>
 
@@ -232,7 +259,7 @@
         </div>
         <div class="text-container">
 
-            <h3 class="project-highlights-subheading mt-4">
+            <h3 class="project-highlights-subheading mt-4" id="highlight_4">
                 4. OBSERVABILITY AND MONITORING 
             </h3>
 
@@ -293,6 +320,10 @@
         font-family: 'Nunito Sans', serif !important
     }
 
+    .case-study p, h1, h2, h3, h4 {
+        font-family: 'Nunito Sans', serif !important
+    }
+
     .text-container {
         margin: 0 auto 0 auto;
         max-width: 1100px;
@@ -327,10 +358,13 @@
 
     .stats {
         display: flex;
-        align-items: flex-end;
-        justify-content: flex-start;
+        flex-direction: column;
         gap: 16px;
-        width: 50%;
+        background-color: #f1f1f1;
+        border-radius: 12px;
+        flex: 1;
+        padding: 12px;
+        padding-top: 28px;
     }
 
     .stats>p {
@@ -349,18 +383,67 @@
         flex-wrap: wrap;
         row-gap: 54px;
         margin-bottom: 62px;
+        text-align: center;
+        gap: 20px;
+    }
+
+    .testimonial {
+        text-align: center;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+
+    .testimonial .inner {
+        display: flex;
+        flex-direction: column;
+        max-width: 1100px;
+        margin: 0 auto 0 auto;
+    }
+
+    .testimonial p {
+        max-width: 1100px;
+        margin: 0 auto 0 auto;
+    }
+
+    .testimonial .text {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 28px;
+    }
+
+    .testimonial .name {
+        max-width: 1100px;
+        margin: 0 auto 0 auto;
+        font-weight: 400;
+        font-size: 16px;
+        padding-top: 8px;
     }
 
     .banner-container {
-        background: gray;
         width: 100%;
-        height: 350px;
+        height: auto;
         margin-bottom: 50px;
+    }
+
+    .img_small {
+        width: 50% !important ;
+        height: auto;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .bg-deep_blue {
+        background-color: #0E3252;
+    }
+
+    .bg-grey {
+        background-color: #F1F1F1;
     }
 
     .banner-container>img {
         width: 100%;
         margin: 0 auto 0 auto;
+        display: flex;
     }
 
     .client-details-container {
@@ -480,29 +563,32 @@
         }
     }
 
-    .project-highlights-grid>.item {
+    .project-highlights-grid>a>.item {
         display: flex;
         justify-content: flex-start;
         gap: 16px;
-        align-items: flex-start;
+        align-items: flex-baseline;
     }
 
-    .project-highlights-grid>.item>.index {
+    .project-highlights-grid>a>.item>.index {
         font-size: 24px;
         font-weight: 700;
-        line-height: 33px;
+        line-height: 24px;
         letter-spacing: 0.06em;
         text-align: left;
         color: black;
     }
 
-    .project-highlights-grid>.item>.label {
+    .project-highlights-grid>a>.item>.label {
         font-style: normal;
         font-weight: 400;
         font-size: 18px;
         line-height: 25px;
         letter-spacing: 0.06em;
         max-width: 24em;
+        text-decoration: underline;
+        text-underline-position: under;
+        text-decoration-color: #0E3252;
         color: black;
     }
 
