--- a/layouts/partials/recommend-case-study.html
+++ b/layouts/partials/recommend-case-study.html
@@ -43,6 +43,7 @@
         letter-spacing: 0.06em;
         text-transform: capitalize;
         color: #1E1E1E;
+        margin: 0 20px 0 20px;
     }
 
     .recommend-case-study .cards-container {
