removed highlights and added styling for header

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -66,7 +66,7 @@
                 <a href="{{ .link | relLangURL }}" title="{{ .label }}" class="big-btn btn btn-sm ml-3">{{ .label }}</a>
                 {{ end }}
                 {{ end }}
-                <a class="nav-link" href="https://www.incubyte.co/" role="button" data-toggle="dropdown">
+                <a class="nav-link" href="https://www.incubyte.co/" role="button">
                   home
                 </a>
             </div>
