--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -84,6 +84,10 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
     padding: 8px 50px;
   }
 
+  .navbar-brand {
+    width: 100%;
+  }
+
   /* .navbar-light .navbar-nav .nav-link {
     color: #0e3252;
   } */
