--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -84,6 +84,18 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
     padding: 8px 50px;
   }
 
+  @media (max-width: 991px) {  
+    .navigation-bar {
+      padding: 8px 20px;
+    }
+  }
+
+  @media (max-width: 400px) {  
+    .navigation-bar {
+      padding: 8px 10px;
+    }
+  }
+
   .navbar-brand {
     width: 100%;
   }
