--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,15 +3,15 @@
   <!-- <div class="container"> -->
     <div class="">
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+        <nav class="navbar navbar-expand navbar-light bg-transparent">
             <a class="navbar-brand" href="{{ site.Params.homeURL | absLangURL }}">
                 {{ with site.Params.logo}}
                 <img width="130px" class="img-fluid" src="{{ . | relLangURL }}" alt="{{ site.Title }}">
                 {{ else }}{{site.Title}}{{end}}
             </a>
-            <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navigation" aria-label="menu">
+            <!-- <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navigation" aria-label="menu">
                 <i class="fas fa-bars"></i>
-            </button>
+            </button> -->
 
             <div class="collapse navbar-collapse text-center" id="navigation">
                 <!-- <div>
