--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -58,7 +58,7 @@
     </div>
     <div class="border-top border-default text-center py-4 mt-4">
       <small class="d-flex flex-column flex-sm-row justify-content-between align-items-center mb-1">
-        <p>905 Swati Clover, thaltej, Ahmedabad - 380054</p>
+        <p>905 Swati Clover, Thaltej, Ahmedabad - 380054</p>
       <small class="content">{{ site.Params.Copyright | markdownify }}</small>
     </div>
   </div>
