banner image and blog card content update

--- a/layouts/partials/monnai-case-study.html
+++ b/layouts/partials/monnai-case-study.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="banner-container bg-deep_blue">
+        <div class="banner-container bg-monnai_blue">
             <img class="img_small" src="{{ .Params.banner_image |relURL }}" alt="{{ .Title }}">
         </div>
         <div class="text-container">
@@ -434,6 +434,10 @@
 
     .bg-deep_blue {
         background-color: #0E3252;
+    }
+
+    .bg-monnai_blue {
+        background-color: #202475;
     }
 
     .bg-grey {
