--- a/layouts/partials/global-case-study.html
+++ b/layouts/partials/global-case-study.html
@@ -118,7 +118,7 @@
                 </div> -->
             </div>
         </div>
-        <div class="banner-container bg-deep_blue text-center testimonial">
+        <!-- <div class="banner-container bg-deep_blue text-center testimonial">
             <div class="inner">
                 <img style="width: 62px; height: auto; margin-bottom: -20px;"
                     src="{{ .Params.open_quote |relURL }}">
@@ -131,7 +131,7 @@
             <img class="rounded-circle" style="width: 62px; height: 62px;background: #D9D9D9 !important;"
                 src="{{ .Params.testimonial_person |relURL }}">
             <p class="label text-white name">Ravish Patel, Co-founder at Monnai</p>
-        </div>
+        </div> -->
         <div class="text-container">
             <h2 class="project-highlights-heading">PROJECT HIGHLIGHTS</h2>
 
