--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -193,6 +193,11 @@ resources.Concat "/css/style.css" | minify | fingerprint "sha512"}}
     padding: 5px 10px;
   }
 
+  .back-link {
+    font-size: 14px;
+    color: #838383;
+  }
+
   .card {
     border-radius: 10px;
     height: 100%;
